Updates for 1.9.0.RC4 - latest JDT